crates/mun_codegen/src/snapshots/mun_codegen__test__compare_op_i32.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn equals(a: i32, b: i32) -> bool { a == b }\n    pub fn not_equal(a: i32, b: i32) -> bool { a != b}\n    pub fn less(a: i32, b: i32) -> bool { a < b }\n    pub fn less_equal(a: i32, b: i32) -> bool { a <= b }\n    pub fn greater(a: i32, b: i32) -> bool { a > b }\n    pub fn greater_equal(a: i32, b: i32) -> bool { a >= b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [2 x ptr]

define i1 @equals(i32 %0, i32 %1) {
body:
  %b = alloca i32, align 4
  store i32 %1, ptr %b, align 4
  %a = alloca i32, align 4
  store i32 %0, ptr %a, align 4
  %a1 = load i32, ptr %a, align 4
  %b2 = load i32, ptr %b, align 4
  %eq = icmp eq i32 %a1, %b2
  ret i1 %eq
}

define i1 @not_equal(i32 %0, i32 %1) {
body:
  %b = alloca i32, align 4
  store i32 %1, ptr %b, align 4
  %a = alloca i32, align 4
  store i32 %0, ptr %a, align 4
  %a1 = load i32, ptr %a, align 4
  %b2 = load i32, ptr %b, align 4
  %neq = icmp ne i32 %a1, %b2
  ret i1 %neq
}

define i1 @less(i32 %0, i32 %1) {
body:
  %b = alloca i32, align 4
  store i32 %1, ptr %b, align 4
  %a = alloca i32, align 4
  store i32 %0, ptr %a, align 4
  %a1 = load i32, ptr %a, align 4
  %b2 = load i32, ptr %b, align 4
  %less = icmp slt i32 %a1, %b2
  ret i1 %less
}

define i1 @less_equal(i32 %0, i32 %1) {
body:
  %b = alloca i32, align 4
  store i32 %1, ptr %b, align 4
  %a = alloca i32, align 4
  store i32 %0, ptr %a, align 4
  %a1 = load i32, ptr %a, align 4
  %b2 = load i32, ptr %b, align 4
  %lesseq = icmp sle i32 %a1, %b2
  ret i1 %lesseq
}

define i1 @greater(i32 %0, i32 %1) {
body:
  %b = alloca i32, align 4
  store i32 %1, ptr %b, align 4
  %a = alloca i32, align 4
  store i32 %0, ptr %a, align 4
  %a1 = load i32, ptr %a, align 4
  %b2 = load i32, ptr %b, align 4
  %greater = icmp sgt i32 %a1, %b2
  ret i1 %greater
}

define i1 @greater_equal(i32 %0, i32 %1) {
body:
  %b = alloca i32, align 4
  store i32 %1, ptr %b, align 4
  %a = alloca i32, align 4
  store i32 %0, ptr %a, align 4
  %a1 = load i32, ptr %a, align 4
  %b2 = load i32, ptr %b, align 4
  %greatereq = icmp sge i32 %a1, %b2
  ret i1 %greatereq
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [2 x ptr] zeroinitializer
