crates/mun_codegen/src/snapshots/mun_codegen__test__compare_op_u64.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn equals(a: u64, b: u64) -> bool { a == b }\n    pub fn not_equal(a: u64, b: u64) -> bool { a != b}\n    pub fn less(a: u64, b: u64) -> bool { a < b }\n    pub fn less_equal(a: u64, b: u64) -> bool { a <= b }\n    pub fn greater(a: u64, b: u64) -> bool { a > b }\n    pub fn greater_equal(a: u64, b: u64) -> bool { a >= b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [2 x ptr]

define i1 @equals(i64 %0, i64 %1) {
body:
  %b = alloca i64, align 8
  store i64 %1, ptr %b, align 4
  %a = alloca i64, align 8
  store i64 %0, ptr %a, align 4
  %a1 = load i64, ptr %a, align 4
  %b2 = load i64, ptr %b, align 4
  %eq = icmp eq i64 %a1, %b2
  ret i1 %eq
}

define i1 @not_equal(i64 %0, i64 %1) {
body:
  %b = alloca i64, align 8
  store i64 %1, ptr %b, align 4
  %a = alloca i64, align 8
  store i64 %0, ptr %a, align 4
  %a1 = load i64, ptr %a, align 4
  %b2 = load i64, ptr %b, align 4
  %neq = icmp ne i64 %a1, %b2
  ret i1 %neq
}

define i1 @less(i64 %0, i64 %1) {
body:
  %b = alloca i64, align 8
  store i64 %1, ptr %b, align 4
  %a = alloca i64, align 8
  store i64 %0, ptr %a, align 4
  %a1 = load i64, ptr %a, align 4
  %b2 = load i64, ptr %b, align 4
  %less = icmp ult i64 %a1, %b2
  ret i1 %less
}

define i1 @less_equal(i64 %0, i64 %1) {
body:
  %b = alloca i64, align 8
  store i64 %1, ptr %b, align 4
  %a = alloca i64, align 8
  store i64 %0, ptr %a, align 4
  %a1 = load i64, ptr %a, align 4
  %b2 = load i64, ptr %b, align 4
  %lesseq = icmp ule i64 %a1, %b2
  ret i1 %lesseq
}

define i1 @greater(i64 %0, i64 %1) {
body:
  %b = alloca i64, align 8
  store i64 %1, ptr %b, align 4
  %a = alloca i64, align 8
  store i64 %0, ptr %a, align 4
  %a1 = load i64, ptr %a, align 4
  %b2 = load i64, ptr %b, align 4
  %greater = icmp ugt i64 %a1, %b2
  ret i1 %greater
}

define i1 @greater_equal(i64 %0, i64 %1) {
body:
  %b = alloca i64, align 8
  store i64 %1, ptr %b, align 4
  %a = alloca i64, align 8
  store i64 %0, ptr %a, align 4
  %a1 = load i64, ptr %a, align 4
  %b2 = load i64, ptr %b, align 4
  %greatereq = icmp uge i64 %a1, %b2
  ret i1 %greatereq
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [2 x ptr] zeroinitializer
