crates/mun_codegen/src/snapshots/mun_codegen__test__fibonacci.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn fibonacci(n:i32) -> i32 {\n        if n <= 1 {\n            n\n        } else {\n            fibonacci(n-1) + fibonacci(n-2)\n        }\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define i32 @fibonacci(i32 %0) {
body:
  %n = alloca i32, align 4
  store i32 %0, ptr %n, align 4
  %n1 = load i32, ptr %n, align 4
  %lesseq = icmp sle i32 %n1, 1
  br i1 %lesseq, label %then, label %else

then:                                             ; preds = %body
  %n2 = load i32, ptr %n, align 4
  br label %if_merge

else:                                             ; preds = %body
  %n3 = load i32, ptr %n, align 4
  %sub = sub i32 %n3, 1
  %fibonacci = call i32 @fibonacci(i32 %sub)
  %n4 = load i32, ptr %n, align 4
  %sub5 = sub i32 %n4, 2
  %fibonacci6 = call i32 @fibonacci(i32 %sub5)
  %add = add i32 %fibonacci, %fibonacci6
  br label %if_merge

if_merge:                                         ; preds = %else, %then
  %iftmp = phi i32 [ %n2, %then ], [ %add, %else ]
  ret i32 %iftmp
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
