crates/mun_codegen/src/snapshots/mun_codegen__test__fibonacci_loop.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn fibonacci(n:i32) -> i32 {\n        let a = 0;\n        let b = 1;\n        let i = 1;\n        loop {\n            if i > n {\n                return a\n            }\n            let sum = a + b;\n            a = b;\n            b = sum;\n            i += 1;\n        }\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define i32 @fibonacci(i32 %0) {
body:
  %sum = alloca i32, align 4
  %i = alloca i32, align 4
  %b = alloca i32, align 4
  %a = alloca i32, align 4
  %n = alloca i32, align 4
  store i32 %0, ptr %n, align 4
  store i32 0, ptr %a, align 4
  store i32 1, ptr %b, align 4
  store i32 1, ptr %i, align 4
  br label %loop

loop:                                             ; preds = %if_merge, %body
  %i1 = load i32, ptr %i, align 4
  %n2 = load i32, ptr %n, align 4
  %greater = icmp sgt i32 %i1, %n2
  br i1 %greater, label %then, label %if_merge

then:                                             ; preds = %loop
  %a3 = load i32, ptr %a, align 4
  ret i32 %a3

if_merge:                                         ; preds = %loop
  %a4 = load i32, ptr %a, align 4
  %b5 = load i32, ptr %b, align 4
  %add = add i32 %a4, %b5
  store i32 %add, ptr %sum, align 4
  %a6 = load i32, ptr %a, align 4
  %b7 = load i32, ptr %b, align 4
  store i32 %b7, ptr %a, align 4
  %b8 = load i32, ptr %b, align 4
  %sum9 = load i32, ptr %sum, align 4
  store i32 %sum9, ptr %b, align 4
  %i10 = load i32, ptr %i, align 4
  %add11 = add i32 %i10, 1
  store i32 %add11, ptr %i, align 4
  br label %loop
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
