crates/mun_codegen/src/snapshots/mun_codegen__test__field_crash.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    struct(gc) Foo { a: i32 };\n\n    pub fn main(c:i32) -> i32 {\n        let b = Foo { a: c + 5 }\n        b.a\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

%DispatchTable = type { ptr }
%Foo = type { i32 }

@allocatorHandle = external global ptr
@dispatchTable = external global %DispatchTable
@global_type_lookup_table = external global [2 x ptr]

define i32 @main(i32 %0) {
body:
  %b = alloca ptr, align 8
  %c = alloca i32, align 4
  store i32 %0, ptr %c, align 4
  %c1 = load i32, ptr %c, align 4
  %add = add i32 %c1, 5
  %init = insertvalue %Foo undef, i32 %add, 0
  %new_ptr = load ptr, ptr @dispatchTable, align 8
  %Foo_ptr = load ptr, ptr @global_type_lookup_table, align 8
  %allocator_handle = load ptr, ptr @allocatorHandle, align 8
  %ref = call ptr %new_ptr(ptr %Foo_ptr, ptr %allocator_handle)
  %"ref->data" = load ptr, ptr %ref, align 8
  store %Foo %init, ptr %"ref->data", align 4
  store ptr %ref, ptr %b, align 8
  %"b->data" = load ptr, ptr %b, align 8
  %deref = load ptr, ptr %"b->data", align 8
  %"Foo->a" = getelementptr inbounds %Foo, ptr %deref, i32 0, i32 0
  %Foo.a = load i32, ptr %"Foo->a", align 4
  ret i32 %Foo.a
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

%DispatchTable = type { ptr }

@dispatchTable = global %DispatchTable zeroinitializer
@global_type_lookup_table = global [2 x ptr] zeroinitializer
@allocatorHandle = unnamed_addr global ptr null
