crates/mun_codegen/src/snapshots/mun_codegen__test__function_arguments.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn main(a:i32) -> i32 {\n      a\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define i32 @main(i32 %0) {
body:
  %a = alloca i32, align 4
  store i32 %0, ptr %a, align 4
  %a1 = load i32, ptr %a, align 4
  ret i32 %a1
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
